--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "env": {
         "SESSION_ID": {
-            "description": "Type the Session-ID you got from scaning QR",
+            "description": "cyber-x@;;;1AMg1bqa#S0C50WVzkwR4pVy84vv6CsjqudFinGWt4iFpyXT6GXc",
             "required": true,
             "value": ""
         },
@@ -29,7 +29,7 @@
         "WORK_TYPE": {
             "description": "Add the worktype of the Bot ( private , public , only_group )",
             "required": true,
-            "value": "private"
+            "value": "public"
         }
     },
     "buildpacks": [
